correction du focus, compression images en jpg, amelioration du contraste

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ a:hover {
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
+    opacity: 0.5;
 }
 
 .b-parallax {
@@ -105,7 +106,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .d-bloc button:hover {
@@ -156,6 +157,7 @@ a:hover {
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
+    transform: scale(1.5);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -238,7 +240,11 @@ a:hover {
 .l-bloc p a {
     color: rgba(0, 0, 0, .6);
 }
+.l-bloc .portfolio-row .col-sm-6 a:focus img{
+    border: 2px solid #000000;
+    transform: scale(1.1);
 
+}
 .d-bloc .panel .a-btn:hover,
 .l-bloc .a-btn:hover,
 .l-bloc .navbar a:hover,
@@ -268,7 +274,10 @@ a:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
 }
-
+/* focus icon social*/
+#bloc-8 a:focus .icon-md{
+    transform: scale(1.5);
+}
 .voffset {
     margin-top: 30px;
 }
@@ -305,7 +314,9 @@ a:hover {
     font-weight: 600;
     line-height: 44px;
 }
-
+.navbar-brand:focus{
+    transform: scale(1.1);
+}
 .navbar-brand img {
     max-height: 200px;
     margin: 0 5px 0 0;
@@ -339,10 +350,11 @@ a:hover {
     text-align: inherit;
 }
 
-/*.nav > li a:hover,
+.nav > li a:hover,
 .nav > li a:focus {
     background: transparent;
-}*/
+    transform: scale(1.5);
+}
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
@@ -694,7 +706,7 @@ address {
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 .tight-width-whitespace {
@@ -719,7 +731,6 @@ p {
 .social {
     max-width: 400px;
     margin: 30px auto 30px auto;
-
 }
 
 h2 {
@@ -775,7 +786,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(165, 147, 99, 0.9);
     padding: 40px 40px 40px 40px;
 }
 
@@ -783,6 +794,7 @@ h4 {
     font-weight: 900;
     text-decoration: underline !important;
 }
+
 
 .bgc-white {
     background-color: #FFFFFF;
@@ -803,13 +815,17 @@ h4 {
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #000000 !important;
+    transition: all 300ms;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956 !important;
     color: #FFFFFF !important;
 }
+.btn-atomic-tangerine:focus{
+   transform: scale(1.3);/*****************************/
 
+}
 .ltc-white {
     color: #FFFFFF !important;
 }
@@ -844,7 +860,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
